--- a/BCI_MOD9_HW.ipynb
+++ b/BCI_MOD9_HW.ipynb
@@ -94,11 +94,21 @@
     "# Paths\n",
     "dataset_name = '1'\n",
     "dataset_filetype = 'edf'\n",
-    "repository = 'BCI_MOD7_HW'\n",
+    "repository = 'BCI_MOD9_HW'\n",
     "app_dir = Path('/', 'app')\n",
     "data_dir = app_dir.joinpath('data')\n",
     "notebook_dir = app_dir.joinpath(repository)\n",
     "data_file = data_dir.joinpath(f'{dataset_name}.{dataset_filetype}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Set up Montage -- Channel names in this file adhere to 10-05\n",
+    "montage = mne.channels.make_standard_montage('standard_1005')"
    ]
   },
   {
@@ -112,7 +122,15 @@
     "chs_EMG = ['EMG EMG_RH', 'EMG EMG_LH', 'EMG EMG_RF']\n",
     "raw = mne.io.read_raw_edf(data_file, eog=chs_EOG, misc=chs_EMG, stim_channel='auto', exclude=(), infer_types=False, preload=True, verbose=None)\n",
     "original_raw = raw.copy()\n",
-    "raw"
+    "# Get events from the database\n",
+    "annotations = raw.annotations\n",
+    "events_from_annot, event_dict = mne.events_from_annotations(raw)\n",
+    "# epoch surrounding trial onset.\n",
+    "fs = raw.info['sfreq']\n",
+    "starttime = -3\n",
+    "endtime = 3\n",
+    "timebase_samp = np.arange(int(fs*starttime), int(fs*endtime))\n",
+    "timebase_sec = timebase_samp/fs"
    ]
   },
   {
@@ -122,7 +140,17 @@
    "outputs": [],
    "source": [
     "# re-reference to the common average using MNE\n",
-    "raw_car = raw.copy().set_eeg_reference( 'average' );"
+    "raw_car = raw.copy().set_eeg_reference('average')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Resample\n",
+    "raw_resampled = raw_car.copy().resample()"
    ]
   },
   {
@@ -170,44 +198,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# plot all channels whose name contains the string “AF”. \n",
-    "# A 10 second stretch starting at 600 seconds into the file.\n",
-    "starttime = 600\n",
-    "duration = 10\n",
-    "fig02 = raw_filtered_AF.plot(events=None, duration=duration, start=starttime, n_channels=len(AF_ch), \n",
-    "    title=f'EEG of AF channels, common average referenced and bandpass filtered between 1 and 30 Hz, beginning at {starttime} seconds for a duration of {duration} seconds', \n",
-    "    show_scrollbars=False, show_scalebars=True, time_format='float')\n",
-    "fig02.show()\n",
-    "fig02.savefig(f'AF_EEG_{starttime}_{duration}.png', dpi=100, format='png', metadata={'Title': f'AF_EEG_{starttime}_{duration}', 'Author': 'Eitan Waks', \n",
-    "            'Description': f'EEG plot of {AF_ch} channels, preprocessed with common average reference and bandpass filtered between 1 and 30 Hz, starting at {starttime} seconds for a duration of {duration} seconds. The data is from the robintibor/high-gamma-dataset (data/train/1.edf)'},\n",
-    "            bbox_inches=None, pad_inches=0.1, facecolor='auto', edgecolor='auto', backend=None)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "##### The plot which begins at 600 seconds contains in artifact. The most likely cause for this artifact is an eye blink."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   },
-   "source": [
-    "#### Q2. Following the preprocessing previously applied in Q1, segment trials from -1.0 to +3.0 seconds around the event timestamps in the dataset events structure, and plot the trial-average (mean) timeseries for “Cz”, “C3”, “C4, “Pz”, and “Oz”, without regard to trial type (i.e., including all trial types) [2 pts per plot.]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -221,29 +211,6 @@
     "ch_idxs = [raw.ch_names.index(ch) for ch in chs]\n",
     "raw_filtered_chs = raw_filtered.copy().pick(chs)  # selects only the 'EEG Cz', 'EEG C3', 'EEG C4', 'EEG Pz', 'EEG Oz' channels\n",
     "raw_filtered_chs_data, raw_filtered_chs_t = raw_filtered_chs.copy()[:, :]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Let's grab 1 second before the trial onset and 3 seconds after onset, and define onset to be 0 sec.\n",
-    "fs = raw.info[ 'sfreq' ]\n",
-    "timebase_samp = np.arange( int( fs * -1.0 ), int( fs * 3.0 ) )\n",
-    "timebase_sec = timebase_samp / fs"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Get events from the database\n",
-    "annotations = raw.annotations\n",
-    "events_from_annot, event_dict = mne.events_from_annotations(raw)"
    ]
   },
   {
