--- a/BCI_MOD9_HW.ipynb
+++ b/BCI_MOD9_HW.ipynb
@@ -98,12 +98,13 @@
     "app_dir = Path('/', 'app')\n",
     "data_dir = app_dir.joinpath('data')\n",
     "notebook_dir = app_dir.joinpath(repository)\n",
-    "data_file = data_dir.joinpath(f'{dataset_name}.{dataset_filetype}')"
+    "data_file = data_dir.joinpath(f'{dataset_name}.{dataset_filetype}')\n",
+    "data_file = Path.cwd().joinpath(f'{dataset_name}.{dataset_filetype}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,9 +114,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Extracting EDF parameters from c:\\Users\\eitan\\Dropbox\\JHU\\EN.585.783.81.SU22 Introduction to Brain-Computer Interface\\Module 9 BCI Practicum Part 3\\Assignments\\BCI_MOD9_HW\\1.edf...\n",
+      "EDF file detected\n",
+      "Setting channel info structure...\n",
+      "Creating raw.info structure...\n",
+      "Reading 0 ... 1225999  =      0.000 ...  2451.998 secs...\n",
+      "Used Annotations descriptions: ['feet', 'left_hand', 'rest', 'right_hand']\n"
+     ]
+    }
+   ],
    "source": [
     "# Load the dataset\n",
     "chs_EOG = ['EOG EOGh', 'EOG EOGv']\n",
@@ -127,6 +141,7 @@
     "events_from_annot, event_dict = mne.events_from_annotations(raw)\n",
     "# epoch surrounding trial onset.\n",
     "fs = raw.info['sfreq']\n",
+    "# Start and end times were -2.5 seconds and 2.5 seconds respectively in the lecture notebook\n",
     "starttime = -3\n",
     "endtime = 3\n",
     "timebase_samp = np.arange(int(fs*starttime), int(fs*endtime))\n",
@@ -316,7 +331,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.5"
+   "version": "3.10.6"
   },
   "vscode": {
    "interpreter": {
