--- a/BCI_MOD9_HW.ipynb
+++ b/BCI_MOD9_HW.ipynb
@@ -98,8 +98,7 @@
     "app_dir = Path('/', 'app')\n",
     "data_dir = app_dir.joinpath('data')\n",
     "notebook_dir = app_dir.joinpath(repository)\n",
-    "data_file = data_dir.joinpath(f'{dataset_name}.{dataset_filetype}')\n",
-    "data_file = Path.cwd().joinpath(f'{dataset_name}.{dataset_filetype}')"
+    "data_file = data_dir.joinpath(f'{dataset_name}.{dataset_filetype}')"
    ]
   },
   {
